[ClearMine] 1. 将Logic从Common中独立出来 2. 移除不必要的InternalVisableTo特性  3. 完善版权声明
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@139 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -117,10 +117,10 @@
     <Compile Include="Dialogs\ExceptionBox.xaml.cs">
       <DependentUpon>ExceptionBox.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Dialogs\ExceptionMessage.cs" />
-    <Compile Include="Dialogs\ExceptionMessageProcessor.cs" />
+    <Compile Include="Messages\ExceptionMessage.cs" />
+    <Compile Include="Messages\ExceptionMessageProcessor.cs" />
     <Compile Include="Dialogs\OptionDialog.cs" />
-    <Compile Include="Dialogs\ShowDialogMessage.cs" />
+    <Compile Include="Messages\ShowDialogMessage.cs" />
     <Compile Include="FrameworkModule.cs" />
     <Compile Include="Interactivity\Behavior.cs" />
     <Compile Include="Interactivity\BehaviorCollection.cs" />
