[ClearMine] 1.模块化主程序  2.弹出窗私有化  3.异常消息处理器的名字空间修正。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@142 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/ClearMine.csproj
+++ b/ClearMine/ClearMine.csproj
@@ -141,6 +141,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
