[ClearMine] 将截图与游戏的保存、加载功能模块化，并将游戏实例的加载过程消息化
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@146 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -101,6 +101,7 @@
     <Compile Include="ComponentModel\ViewModelBase.cs" />
     <Compile Include="Difficulty.cs" />
     <Compile Include="HeroHistory.cs" />
+    <Compile Include="Utilities\IVisualShoot.cs" />
     <Compile Include="Utilities\LocalizationHelper.cs" />
     <Compile Include="Messaging\MessageAggregator.cs" />
     <Compile Include="Messaging\MessageBase.cs" />
