--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -84,6 +84,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -121,6 +122,7 @@
     <Compile Include="Messages\ExceptionMessage.cs" />
     <Compile Include="Messages\ExceptionMessageProcessor.cs" />
     <Compile Include="Dialogs\OptionDialog.cs" />
+    <Compile Include="Messages\GameLoadMessage.cs" />
     <Compile Include="Messages\GameStatusMessage.cs" />
     <Compile Include="Messages\ShowDialogMessage.cs" />
     <Compile Include="FrameworkModule.cs" />
@@ -131,6 +133,7 @@
       <SubType>Code</SubType>
     </Compile>
     <AppDesigner Include="Properties\" />
+    <Compile Include="Visual\VisualShooter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Dialogs\ExceptionBox.xaml">
