[ClearMine] 1.提取出Game相关的逻辑  2. 简化消息发送和订阅的方式
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@147 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.GameDefinition/ClearMine.GameDefinition.csproj
+++ b/ClearMine.GameDefinition/ClearMine.GameDefinition.csproj
@@ -36,7 +36,9 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +57,7 @@
     <Compile Include="MineCell.cs" />
     <Compile Include="PressState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\GameExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClearMine.Common\ClearMine.Common.csproj">
