--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -99,6 +99,7 @@
   <ItemGroup>
     <Compile Include="Behaviors\AnimateEffectBehavior.cs" />
     <Compile Include="Behaviors\AutoCheckMenuItemsBehavior.cs" />
+    <Compile Include="Behaviors\SelectCurrentUICultureBehavior.cs" />
     <Compile Include="Behaviors\SortableListViewBehavior.cs" />
     <Compile Include="Commands\CommandsHelper.cs" />
     <Compile Include="Commands\GameCommands.cs" />
