[ClearMine] 帮助功能的启动方式消息化
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@150 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -125,6 +125,8 @@
     <Compile Include="Dialogs\OptionDialog.cs" />
     <Compile Include="Messages\GameLoadMessage.cs" />
     <Compile Include="Messages\GameStatusMessage.cs" />
+    <Compile Include="Messages\HelpRequestedMessage.cs" />
+    <Compile Include="Messages\HelpRequestedMessageProcessor.cs" />
     <Compile Include="Messages\ShowDialogMessage.cs" />
     <Compile Include="FrameworkModule.cs" />
     <Compile Include="Interactivity\Behavior.cs" />
