[ClearMine] 1. 支持Flags过多提示   2. 使用XAML改变图标   3. 添加FlowDocument帮助文档
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@152 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/ClearMine.Dialogs.csproj
+++ b/ClearMine.Dialogs/ClearMine.Dialogs.csproj
@@ -74,6 +74,9 @@
     <Compile Include="GameWonWindow.xaml.cs">
       <DependentUpon>GameWonWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="HelpDialog.xaml.cs">
+      <DependentUpon>HelpDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="OptionsDialog.xaml.cs">
       <DependentUpon>OptionsDialog.xaml</DependentUpon>
     </Compile>
@@ -104,6 +107,10 @@
     <Page Include="GameWonWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="HelpDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="OptionsDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
