[ClearMine] 添加是否在红旗过多时显示警告的配置项
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@154 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/Properties/Settings.settings
+++ b/ClearMine.Common/Properties/Settings.settings
@@ -89,5 +89,8 @@
     <Setting Name="HelpDocumentName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ClearMineHelp.chm</Value>
     </Setting>
+    <Setting Name="ShowTooManyFlagsWarning" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
