[ClearMine] 修正一些代码分析的警告
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@156 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -120,7 +120,7 @@
     <Compile Include="Utilities\EmailHelper.cs" />
     <Compile Include="Utilities\GenericExtension.cs" />
     <Compile Include="Utilities\Infrastructure.cs" />
-    <Compile Include="Utilities\WindowsApi.cs" />
+    <Compile Include="Utilities\NativeMethods.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
