[ClearMine] 支持主题切换
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@159 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -102,8 +102,9 @@
     <Compile Include="Difficulty.cs" />
     <Compile Include="HeroHistory.cs" />
     <Compile Include="Messaging\SwitchLanguageMessage.cs" />
+    <Compile Include="Messaging\SwitchThemeMessage.cs" />
     <Compile Include="Utilities\IVisualShoot.cs" />
-    <Compile Include="Utilities\LocalizationHelper.cs" />
+    <Compile Include="Utilities\ResourceHelper.cs" />
     <Compile Include="Messaging\MessageAggregator.cs" />
     <Compile Include="Messaging\MessageBase.cs" />
     <Compile Include="Messaging\MessageManager.cs" />
