[ClearMine] 添加Linux Ubuntu风格
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@161 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/ClearMine.Framework.csproj
+++ b/ClearMine.Framework/ClearMine.Framework.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Controls\MineCellControl.cs" />
     <Compile Include="Controls\MinesPanel.cs" />
     <Compile Include="Controls\NumberPresenter.cs" />
+    <Compile Include="Controls\SingleNumber.cs" />
     <Compile Include="Controls\VisualAdorner.cs" />
     <Compile Include="Converters\CacheStateToVisibilityConverter.cs" />
     <Compile Include="Converters\DifficultyToBooleanConverter.cs" />
