--- a/ClearMine.Themes/ClearMine.Themes.csproj
+++ b/ClearMine.Themes/ClearMine.Themes.csproj
@@ -89,6 +89,20 @@
       <Name>ClearMine.VM</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\face-cool.png" />
+    <Resource Include="Images\face-sad.png" />
+    <Resource Include="Images\face-smile.png" />
+    <Resource Include="Images\face-win.png" />
+    <Resource Include="Images\face-worried.png" />
+    <Resource Include="Images\flag-question.png" />
+    <Resource Include="Images\flag.png" />
+    <Resource Include="Images\mine.png" />
+    <Resource Include="Images\warning.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\bang.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
