[ClearMine] 更新版本、更改反馈邮件地址
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@164 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/app.config
+++ b/ClearMine/app.config
@@ -22,25 +22,6 @@
             <setting name="Mines" serializeAs="String">
                 <value>10</value>
             </setting>
-            <setting name="HeroList" serializeAs="Xml">
-                <value>
-                    <heroList xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <heroOnLevel level="beginner" played="0" won="0" longestWinning="0"
-                            longestLosing="0" current="0" average="0">
-                            <records />
-                        </heroOnLevel>
-                        <heroOnLevel level="interMediate" played="0" won="0" longestWinning="0"
-                            longestLosing="0" current="0" average="0">
-                            <records />
-                        </heroOnLevel>
-                        <heroOnLevel level="advanced" played="0" won="0" longestWinning="0"
-                            longestLosing="0" current="0" average="0">
-                            <records />
-                        </heroOnLevel>
-                    </heroList>
-                </value>
-            </setting>
             <setting name="PlaySound" serializeAs="String">
                 <value>True</value>
             </setting>
@@ -66,6 +47,9 @@
                 <value>.</value>
             </setting>
             <setting name="WavingFlag" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ShowTooManyFlagsWarning" serializeAs="String">
                 <value>False</value>
             </setting>
         </ClearMine.Common.Properties.Settings>
@@ -100,7 +84,7 @@
                 <value>yy-MM-dd-HH-mm-ss</value>
             </setting>
             <setting name="FeedBackEmail" serializeAs="String">
-                <value>nankezhishi@hotmail.com</value>
+                <value>fadefy@gmail.com</value>
             </setting>
             <setting name="HelpDocumentName" serializeAs="String">
                 <value>ClearMineHelp.chm</value>
