--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Utilities\NativeMethods.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\ClearMine\app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
