--- a/ClearMine.Common/Properties/Settings.settings
+++ b/ClearMine.Common/Properties/Settings.settings
@@ -81,7 +81,7 @@
       <Value Profile="(Default)">yy-MM-dd-HH-mm-ss</Value>
     </Setting>
     <Setting Name="FeedBackEmail" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">nankezhishi@hotmail.com</Value>
+      <Value Profile="(Default)">fadefy@gmail.com</Value>
     </Setting>
     <Setting Name="WavingFlag" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
