--- a/ClearMine/app.config
+++ b/ClearMine/app.config
@@ -52,6 +52,9 @@
             <setting name="ShowTooManyFlagsWarning" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="AccurateTime" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ClearMine.Common.Properties.Settings>
     </userSettings>
     <applicationSettings>
