[ClearMine] 添加捐赠功能
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@167 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -118,7 +118,7 @@
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Utilities\EmailHelper.cs" />
+    <Compile Include="Utilities\WebTools.cs" />
     <Compile Include="Utilities\GenericExtension.cs" />
     <Compile Include="Utilities\Infrastructure.cs" />
     <Compile Include="Utilities\NativeMethods.cs" />
