[ClearMine] 游戏状态变化消息化，添加插件接口，并将音乐播放功能插件化。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@170 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -103,13 +103,14 @@
     <Compile Include="HeroHistory.cs" />
     <Compile Include="Messaging\SwitchLanguageMessage.cs" />
     <Compile Include="Messaging\SwitchThemeMessage.cs" />
+    <Compile Include="Modularity\IPlugin.cs" />
     <Compile Include="Utilities\IVisualShoot.cs" />
     <Compile Include="Utilities\ResourceHelper.cs" />
     <Compile Include="Messaging\MessageAggregator.cs" />
     <Compile Include="Messaging\MessageBase.cs" />
     <Compile Include="Messaging\MessageManager.cs" />
     <Compile Include="Modularity\IModule.cs" />
-    <Compile Include="Modularity\ModuleManager.cs" />
+    <Compile Include="Modularity\ModularityManager.cs" />
     <Compile Include="Utilities\Player.cs" />
     <Compile Include="Utilities\RedirectorTraceListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
