--- a/ClearMine.Plugin.AudioPlayer/ClearMine.Plugin.AudioPlayer.csproj
+++ b/ClearMine.Plugin.AudioPlayer/ClearMine.Plugin.AudioPlayer.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{04D44DD3-3819-4496-8A4C-03298742EA5D}</ProjectGuid>
+    <ProjectGuid>{16DB700F-87C3-4679-BE1E-45A0F479FABE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClearMine.GameDefinition</RootNamespace>
-    <AssemblyName>ClearMine.GameDefinition</AssemblyName>
+    <RootNamespace>ClearMine.Plugin.AudioPlayer</RootNamespace>
+    <AssemblyName>ClearMine.Plugin.AudioPlayer</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -22,7 +22,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -31,15 +30,11 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <BaseAddress>20971520</BaseAddress>
+    <BaseAddress>67108864</BaseAddress>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,27 +43,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CellState.cs" />
-    <Compile Include="CellStateChangedEventArgs.cs" />
-    <Compile Include="ExpandFailedException.cs" />
-    <Compile Include="GameOperation.cs" />
-    <Compile Include="GameState.cs" />
-    <Compile Include="IClearMine.cs" />
-    <Compile Include="IGameSerializer.cs" />
-    <Compile Include="IMinesGenerator.cs" />
-    <Compile Include="Messages\CellStatusMessage.cs" />
-    <Compile Include="Messages\GameLoadMessage.cs" />
-    <Compile Include="Messages\GameStatusMessage.cs" />
-    <Compile Include="Messages\UserOperationMessage.cs" />
-    <Compile Include="MineCell.cs" />
-    <Compile Include="PressState.cs" />
+    <Compile Include="AudioPlayerPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\GameExtension.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClearMine.Common\ClearMine.Common.csproj">
       <Project>{A2631FA1-E4A4-41AC-8E8E-5C8AEB63C83E}</Project>
       <Name>ClearMine.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClearMine.GameDefinition\ClearMine.GameDefinition.csproj">
+      <Project>{04D44DD3-3819-4496-8A4C-03298742EA5D}</Project>
+      <Name>ClearMine.GameDefinition</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
