[ClearMine] 建立起插件的配置机制
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@172 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -103,7 +103,10 @@
     <Compile Include="HeroHistory.cs" />
     <Compile Include="Messaging\SwitchLanguageMessage.cs" />
     <Compile Include="Messaging\SwitchThemeMessage.cs" />
+    <Compile Include="Modularity\AbstractPlugin.cs" />
     <Compile Include="Modularity\IPlugin.cs" />
+    <Compile Include="Modularity\PluginOption.cs" />
+    <Compile Include="Utilities\DataMap.cs" />
     <Compile Include="Utilities\IVisualShoot.cs" />
     <Compile Include="Utilities\ResourceHelper.cs" />
     <Compile Include="Messaging\MessageAggregator.cs" />
