--- a/ClearMine.VM/ClearMine.VM.csproj
+++ b/ClearMine.VM/ClearMine.VM.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Commands\GameCommandBindings.cs" />
     <Compile Include="GameWonDetailsViewModel.cs" />
     <Compile Include="GameWonViewModel.cs" />
+    <Compile Include="PluginsViewModel.cs" />
     <Compile Include="OptionsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Records\GameRecorder.cs" />
