[Clear] 1. 将Save和Close两个Command通用化  2. 为插件实现语言切换的机制，并将语言切换功能通用化。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@175 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -98,6 +98,7 @@
     <Compile Include="ComponentModel\CachedObservableCollection.cs" />
     <Compile Include="ComponentModel\CachingState.cs" />
     <Compile Include="ComponentModel\ICachable.cs" />
+    <Compile Include="ComponentModel\ITransaction.cs" />
     <Compile Include="ComponentModel\IUpdatable.cs" />
     <Compile Include="ComponentModel\ViewModelBase.cs" />
     <Compile Include="Difficulty.cs" />
@@ -109,6 +110,7 @@
     <Compile Include="Modularity\PluginOption.cs" />
     <Compile Include="Utilities\DataMap.cs" />
     <Compile Include="Utilities\IVisualShoot.cs" />
+    <Compile Include="Utilities\LanguageSwitcher.cs" />
     <Compile Include="Utilities\ResourceHelper.cs" />
     <Compile Include="Messaging\MessageAggregator.cs" />
     <Compile Include="Messaging\MessageBase.cs" />
