[ClearMine] 将音乐文件转移到音乐插件中，并将Common中关于音乐的配置删除。音乐插件应当自治。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@179 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Plugin.AudioPlayer/ClearMine.Plugin.AudioPlayer.csproj
+++ b/ClearMine.Plugin.AudioPlayer/ClearMine.Plugin.AudioPlayer.csproj
@@ -57,7 +57,23 @@
       <Name>ClearMine.GameDefinition</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Sound\GameStart.wma">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sound\Lose.wma">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sound\TileMultiple.wma">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sound\TileSingle.wma">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sound\Win.wma">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <Page Include="Localization\en-US.xaml">
       <SubType>Designer</SubType>
