--- a/ClearMine/app.config
+++ b/ClearMine/app.config
@@ -22,6 +22,31 @@
             <setting name="Mines" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="HeroList" serializeAs="Xml">
+                <value>
+                    <heroList xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <heroOnLevel level="beginner" played="0" won="0" longestWinning="0"
+                            longestLosing="0" current="0" average="0">
+                            <records />
+                        </heroOnLevel>
+                        <heroOnLevel level="interMediate" played="0" won="0" longestWinning="0"
+                            longestLosing="0" current="0" average="0">
+                            <records />
+                        </heroOnLevel>
+                        <heroOnLevel level="advanced" played="0" won="0" longestWinning="0"
+                            longestLosing="0" current="0" average="0">
+                            <records />
+                        </heroOnLevel>
+                    </heroList>
+                </value>
+            </setting>
+            <setting name="DataMap" serializeAs="Xml">
+                <value>
+                    <map xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    </map>
+                </value>
+            </setting>
             <setting name="PlaySound" serializeAs="String">
                 <value>True</value>
             </setting>
@@ -59,21 +84,6 @@
     </userSettings>
     <applicationSettings>
         <ClearMine.Common.Properties.Settings>
-            <setting name="SoundLose" serializeAs="String">
-                <value>.\Sound\Lose.wma</value>
-            </setting>
-            <setting name="SoundWin" serializeAs="String">
-                <value>.\Sound\Win.wma</value>
-            </setting>
-            <setting name="SoundStart" serializeAs="String">
-                <value>.\Sound\GameStart.wma</value>
-            </setting>
-            <setting name="SoundTileSingle" serializeAs="String">
-                <value>.\Sound\TileSingle.wma</value>
-            </setting>
-            <setting name="SoundTileMultiple" serializeAs="String">
-                <value>.\Sound\TileMultiple.wma</value>
-            </setting>
             <setting name="SavedGameExt" serializeAs="String">
                 <value>.cmg</value>
             </setting>
