[ClearMine] 用户选择的界面和语言可以被记住。
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@182 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/app.config
+++ b/ClearMine/app.config
@@ -80,6 +80,12 @@
             <setting name="AccurateTime" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="CurrentLanguage" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CurrentTheme" serializeAs="String">
+                <value>luna.normalcolor</value>
+            </setting>
         </ClearMine.Common.Properties.Settings>
     </userSettings>
     <applicationSettings>
