--- a/ClearMine.Common/Properties/Settings.settings
+++ b/ClearMine.Common/Properties/Settings.settings
@@ -86,5 +86,11 @@
     <Setting Name="AccurateTime" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="CurrentLanguage" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="CurrentTheme" Type="System.String" Scope="User">
+      <Value Profile="(Default)">luna.normalcolor</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
