[ClearMine] 使用数据生成程序菜单
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@185 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -99,8 +99,9 @@
     <Compile Include="ComponentModel\ICachable.cs" />
     <Compile Include="ComponentModel\ITransaction.cs" />
     <Compile Include="ComponentModel\IUpdatable.cs" />
-    <Compile Include="ComponentModel\IViewModel.cs" />
-    <Compile Include="ComponentModel\ViewModelBase.cs" />
+    <Compile Include="ComponentModel\UI\IViewModel.cs" />
+    <Compile Include="ComponentModel\UI\MenuData.cs" />
+    <Compile Include="ComponentModel\UI\ViewModelBase.cs" />
     <Compile Include="Difficulty.cs" />
     <Compile Include="HeroHistory.cs" />
     <Compile Include="Messaging\SwitchLanguageMessage.cs" />
