[ClearMine] 1. 使用VM的方式实现主菜单的所有功能。移除AutoCheckMenuItemsBehavior             2. 消息监听实现优先级机制
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@186 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Common/ClearMine.Common.csproj
+++ b/ClearMine.Common/ClearMine.Common.csproj
@@ -100,10 +100,11 @@
     <Compile Include="ComponentModel\ITransaction.cs" />
     <Compile Include="ComponentModel\IUpdatable.cs" />
     <Compile Include="ComponentModel\UI\IViewModel.cs" />
-    <Compile Include="ComponentModel\UI\MenuData.cs" />
+    <Compile Include="ComponentModel\UI\MenuItemData.cs" />
     <Compile Include="ComponentModel\UI\ViewModelBase.cs" />
     <Compile Include="Difficulty.cs" />
     <Compile Include="HeroHistory.cs" />
+    <Compile Include="Messaging\ListeningPriority.cs" />
     <Compile Include="Messaging\SwitchLanguageMessage.cs" />
     <Compile Include="Messaging\SwitchThemeMessage.cs" />
     <Compile Include="Modularity\AbstractPlugin.cs" />
